# pymutscan

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks_public/: README.md  search_benchmark.json
docs/: algorithm.md  benchmark_methodology.md  migration_from_mutscan.md
examples/configs/: mapseq_default.toml  template_switch.toml  two_lane_manifest.toml
examples/synthetic/: README.md  sample_indices.tsv  sample_metadata.tsv  truth.json
notebooks/: 01_process_fastqs.ipynb  02_quality_control.ipynb  03_template_switch_analysis.ipynb  04_barcode_sample_matrix.ipynb  05_multilibrary_roadmap.ipynb
scripts/: benchmark_algorithms.py  export_summarized_experiment.R  generate_synthetic_mapseq.py  run_example_pipeline.py
src/pymutscan/: __init__.py  cli.py  collapse.py  config.py  fastq.py  pipeline.py
tests/: test_collapse.py  test_example_dataset.py  test_pipeline.py  test_roadmap.py
