[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pymutscan"
version = "0.3.0"
description = "Fast, information-preserving MAPseq FASTQ digestion and barcode collapsing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "pymutscan contributors"}]
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]
keywords = ["MAPseq", "sequencing", "barcode", "UMI", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/andrestrocyte/pymutscan"
Repository = "https://github.com/andrestrocyte/pymutscan"
Issues = "https://github.com/andrestrocyte/pymutscan/issues"

[project.optional-dependencies]
dev = [
  "ruff>=0.12",
]
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "matplotlib>=3.8",
  "nbconvert>=7.16",
  "nbformat>=5.10",
]

[project.scripts]
pymutscan = "pymutscan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
